photoprism/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: photoprism
spec:
  selector:
    matchLabels:
      app: photoprism
  serviceName: photoprism
  replicas: 1
  template:
    metadata:
      labels:
        app: photoprism
    spec:
      containers:
        - name: photoprism
          image: photoprism/photoprism:latest
          ports:
            - containerPort: 2342
              name: http
          volumeMounts:
            - mountPath: /assets/photos/originals
              name: originals
            - mountPath: /assets/storage
              name: photoprism
              subPath: storage
            - mountPath: /assets/photos/import
              name: photoprism
              subPath: import
            - mountPath: /assets/photos/export
              name: photoprism
              subPath: export
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /api/v1/status
              port: http
      volumes:
        - name: originals
          persistentVolumeClaim:
            claimName: photoprism-originals
        - name: photoprism
          persistentVolumeClaim:
            claimName: photoprism-storage
