photoprism/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: photoprism
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: photoprism
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: photoprism-db
spec:
  type: ExternalName
  externalName: mariadb.databases.svc.cluster.local
  ports:
  - port: 3306
